--- a/style.css
+++ b/style.css
@@ -1,4 +1,52 @@
 body {
+    /*110 vw is viewport width*/
+    width: 100vw;
+    height: 100vh;
     font-family: 'Roboto', sans-serif;
 
+}
+
+.header,
+.footer {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 7%;
+    background-color: #1f2937;
+
+}
+.section1,
+.section2,
+.section3,
+.section4 {
+    width: 100%;
+    min-height: 22.5%;
+}
+ .section1 {
+    padding-top: 3%;
+    width: 80%;
+    padding-right: 15%;
+    padding-left: 15%;
+    padding-bottom: 3%;
+    
+}
+.headerlogo {
+    font-weight: 700;
+    padding-left: 50px;
+    font-size: x-large;
+}
+.links {
+    font-size: small;
+    margin-left: auto;
+    padding-right: 50px;
+    color: #fff;
+    font-weight: 500;
+}
+.hlink {
+    margin-right: 30px;
+
+}
+.hl {
+    text-decoration: none;
+    color: #fff;
 }
