--- a/style.css
+++ b/style.css
@@ -50,3 +50,38 @@ body {
     text-decoration: none;
     color: #fff;
 }
+/*section 1*/
+.section1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    background-color: #1f2937;
+    color: #f9faf8;
+    box-shadow: 0px 3px 25px 0 #1f2937, 0 4px 15px 0px #ccc, 0 5px 5px 0px #fff;
+}
+.s1text {
+    width: 300px;
+    height: 255px;
+
+}
+.s1imgdiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    border-radius: 10px;
+    width: 255px;
+    height: 255px;
+    margin-right: 35%;
+  }
+  .s1img {
+    width: 250px;
+    height: 250px;
+    border-radius: 8px;
+  }
+.s1h1 {
+    font-weight: 700;
+    font-size: 40px;
+    padding-bottom: 20px;
+}
+
