--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ body {
 .s2h1 {
     display: flex;
     justify-content: center;
-    margin-top:20px;
+    margin-top:70px;
     font-size: 20px;
     font-weight: 600;
 }
@@ -98,7 +98,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #1f2937;
+    background-color: white;
     border-radius: 10px;
     transition: 0.5s;
     cursor: pointer;
@@ -126,3 +126,5 @@ body {
     margin-top: 30px;
     flex-direction: row;
 }
+
+
