--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     width: 100%;
     height: 7%;
-    background-color: #1f2937;
+    background-color: #3881f6;
 
 }
 .section1,
@@ -172,4 +172,25 @@ body {
     font-weight: 900;
     font-size: 20px;
     margin-left: 20px;
+}
+.s4btn {
+    width: 120px;
+    height: 50px;
+    background-color: rgb(255, 84, 84);
+    border: 1.5px solid rgb(255, 255, 255);
+    border-radius: 3px;
+    font-weight: 900;
+    color: #fff;
+    margin-right: 10px;
+}
+.s4btn:hover {
+    cursor: pointer;
+    background-color: red;
+}
+.footer {
+    display: flex;
+    justify-content: center;
+    color: #fff;
+    font-weight: 700;
+    font-size: large;
 }
