--- a/style.css
+++ b/style.css
@@ -69,13 +69,13 @@ a:hover {
 }
 .s1imgdiv {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     background-color: white;
     border-radius: 10px;
     width: 255px;
     height: 255px;
-    margin-right: 35%;
+    margin-right: 10%;
   }
   .s1img {
     width: 250px;
